--- a/pom.xml
+++ b/pom.xml
@@ -169,5 +169,15 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>1.11.3</version>
+        </dependency>
+    </dependencies>
 </project>
