--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
+                    <warName>Fridgezone</warName>
 					<warSourceDirectory>WebContent</warSourceDirectory>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
@@ -193,6 +194,11 @@
             <groupId>org.webjars.bower</groupId>
             <artifactId>angular-resource</artifactId>
             <version>1.4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>ui-grid</artifactId>
+            <version>3.0.1</version>
         </dependency>
     </dependencies>
 </project>
