--- a/pom.xml
+++ b/pom.xml
@@ -172,9 +172,9 @@
             <version>1.4.4</version>
         </dependency>
         <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>ui-grid</artifactId>
-            <version>3.0.1</version>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>angular-ui-grid</artifactId>
+            <version>3.0.7</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
