--- a/pom.xml
+++ b/pom.xml
@@ -156,10 +156,15 @@
             <artifactId>bootstrap</artifactId>
             <version>3.3.5</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.webjars</groupId>-->
+            <!--<artifactId>angular-ui-bootstrap</artifactId>-->
+            <!--<version>0.13.3</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>org.webjars</groupId>
+            <groupId>org.webjars.npm</groupId>
             <artifactId>angular-ui-bootstrap</artifactId>
-            <version>0.13.3</version>
+            <version>0.14.2</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.bower</groupId>
