--- a/pom.xml
+++ b/pom.xml
@@ -156,11 +156,11 @@
             <artifactId>bootstrap</artifactId>
             <version>3.3.5</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.webjars</groupId>-->
-            <!--<artifactId>angular-ui-bootstrap</artifactId>-->
-            <!--<version>0.13.3</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>angular-touch</artifactId>
+            <version>1.4.7</version>
+        </dependency>
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>angular-ui-bootstrap</artifactId>
@@ -169,12 +169,12 @@
         <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>angular</artifactId>
-            <version>1.4.4</version>
+            <version>1.4.7</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>angular-resource</artifactId>
-            <version>1.4.4</version>
+            <version>1.4.7</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.bower</groupId>
